--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,3 @@
 server.port = 8082
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.application.name=api-gateway
-
-logging.level.root=INFO
-logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator = INFO
-logging.level.org.springframework.cloud.gateway = TRACE
-
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-
-spring.cloud.gateway.routes[0].id=accommodation-microservice
-spring.cloud.gateway.routes[0].uri=lb://accommodation-microservice
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/accommodation
-
-spring.cloud.gateway.routes[1].id=user-microservice
-spring.cloud.gateway.routes[1].uri=lb://user-microservice
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/user
-
-spring.cloud.gateway.routes[2].id=reservation-microservice
-spring.cloud.gateway.routes[2].uri=lb://reservation-microservice
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/reservation
-
-spring.cloud.gateway.routes[3].id=discovery-server
-spring.cloud.gateway.routes[3].uri=http://localhost:8761
-spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka
-spring.cloud.gateway.routes[3].filters[0]=SetPath=/
-
-spring.cloud.gateway.routes[4].id=discovery-server-static
-spring.cloud.gateway.routes[4].uri=http://localhost:8761
-spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
+grpc.server.port = 9092
+logging.level.org.springframework.security=DEBUG
