--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<maven.compiler.source>18</maven.compiler.source>
 		<maven.compiler.target>18</maven.compiler.target>
 		<lognet.grpc.version>4.7.1</lognet.grpc.version>
+		<spring-security.version>5.8.0</spring-security.version>
 	</properties>
 	<dependencies>
 
@@ -77,6 +78,12 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.1</version>
 		</dependency>
 
 	</dependencies>
