--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port = 8082
 grpc.server.port = 9092
 logging.level.org.springframework.security=DEBUG
-server.servlet.contextPath=/api
+spring.session.store-type=none
+logging.level.org.springframework.session.web.http.SessionRepositoryFilter.SESSION_LOGGER=DEBUG
