--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>2.7.5</version>
+		</dependency>
+
+		<dependency>
 			<groupId>io.github.lognet</groupId>
 			<artifactId>grpc-spring-boot-starter</artifactId>
 			<version>${lognet.grpc.version}</version>
