--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port = 8082
 grpc.server.port = 9092
 logging.level.org.springframework.security=DEBUG
+
+accommodation-api.grpc.address=${ACCOMMODATION_API_GRPC_ADDRESS:localhost}
+user-api.grpc.address=${USER_API_GRPC_ADDRESS:localhost}
+reservation-api.grpc.address=${RESERVATION_API_GRPC_ADDRESS:localhost}
