--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ user-api.grpc.address=${USER_API_GRPC_ADDRESS:localhost}
 reservation-api.grpc.address=${RESERVATION_API_GRPC_ADDRESS:localhost}
 
 management.endpoints.web.exposure.include=prometheus
+
+logging.file.name = home/gateway-microservice.log
